--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   <input type="text" id="phrase" name="phrase"><br>
 </form>
   <noscript>
-    This site requires Javascript,
+    This site requires Javascript, but the command-line version can be found on 
+<a href=https://github.com/websalt/saltan style= "color: #000000">Github</a>
   </noscript>
   <div id="main"></div>
   <style type="text/css" media="screen">
