Add optimizations via the google closure compiler

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
 <head>
   <title>Saltan</title>
-  <script type="text/javascript" src="jsaltan.js">
+  <script type="text/javascript" src="jsaltan-compiled.js">
   </script>
   <link rel="icon" href="favicon.svg">
 </head>
