Do some restructuring

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 <html>
 <head>
   <title>Saltan</title>
+  <link rel="icon" href="favicon.svg">
+  <link rel="stylesheet" type="text/css" href="style.css">
   <script type="text/javascript" src="jsaltan-compiled.js">
   </script>
-  <link rel="icon" href="favicon.svg">
 </head>
 <body onload="onLoad();">
   <form onsubmit="doFormStuff();" class="my-form">
@@ -19,19 +20,6 @@
     <a href=https://github.com/websalt/saltan style= "color: #000000">Github</a>
   </noscript>
   <div id="main"></div>
-  <style type="text/css" media="screen">
-    body, html {
-    background-color: #D8DBE2;
-    font-family: Verdana, sans-serif;
-    font-size: 15pt;
-    text-align: center;
-    }
-    footer, html {
-    font-family: Verdana, sans-serif;
-    font-size: 10pt;
-    text-align: center;
-    }
-  </style>
   <footer>
     <p>
       <a href=credits.html style= "color: #000000">Credits</a>
