--- a/credits.html
+++ b/credits.html
@@ -5,36 +5,25 @@
 <html>
 <head>
   <title>Saltan</title>
-<link rel="icon" href="favicon.svg">
+  <link rel="icon" href="favicon.svg">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
   <div id="main">
-    Credits
-    <pre>
+Credits
+<p>
 Periodic Table data is from Bowserinator's
 <a href=https://github.com/Bowserinator/Periodic-Table-JSON style= "color: #000000">Periodic Table JSON</a> CC-BY-SA
-
+</p>
+<p>
 The atom favicon is from
 <a href=https://svgsilh.com/9e9e9e/image/296747.html style= "color: #000000">SVG SILH</a> CC0
-    </pre>
+</p>
   </div>
-  <style type="text/css" media="screen">
-    body, html {
-    background-color: #D8DBE2;
-    font-family: Verdana, sans-serif;
-    font-size: 15pt;
-    text-align: center;
-    }
-    footer, html {
-    font-family: Verdana, sans-serif;
-    font-size: 10pt;
-    text-align: center;
-    }
-  </style>
   <footer>
     <p>
-<a href=index.html style= "color: #000000">Saltan</a>
+      <a href=index.html style= "color: #000000">Saltan</a>
     </p>
-</footer>
+  </footer>
 </body>
 </html>
