--- a/credits.html
+++ b/credits.html
@@ -13,16 +13,16 @@
 Credits
 <p>
 Periodic Table data is from Bowserinator's
-<a href=https://github.com/Bowserinator/Periodic-Table-JSON style= "color: #000000">Periodic Table JSON</a> CC-BY-SA
+<a href=https://github.com/Bowserinator/Periodic-Table-JSON>Periodic Table JSON</a> CC-BY-SA
 </p>
 <p>
 The atom favicon is from
-<a href=https://svgsilh.com/9e9e9e/image/296747.html style= "color: #000000">SVG SILH</a> CC0
+<a href=https://svgsilh.com/9e9e9e/image/296747.html>SVG SILH</a> CC0
 </p>
   </div>
   <footer>
     <p>
-      <a href=index.html style= "color: #000000">Saltan</a>
+      <a href=index.html>Saltan</a>
     </p>
   </footer>
 </body>
