--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
   </form>
   <noscript>
     This site requires Javascript, but the command-line version can be found on 
-    <a href=https://github.com/websalt/saltan style= "color: #000000">Github</a>
+    <a href=https://github.com/websalt/saltan>Github</a>
   </noscript>
   <div id="main"></div>
   <footer>
     <p>
-      <a href=credits.html style= "color: #000000">Credits</a>
+      <a href=credits.html>Credits</a>
     </p>
   </footer>
 </body>
