--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- Made by the Salt Clan -->
 <!-- For Father Pohl -->
 <!-- https://github.com/websalt/saltan -->
-<html>
+<html lang="en">
 <head>
   <title>Saltan</title>
   <link rel="icon" href="favicon.svg">
