--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
   <title>Saltan</title>
   <link rel="icon" href="favicon.svg">
   <link rel="stylesheet" type="text/css" href="style.css">
-  <script type="text/javascript" src="jsaltan-compiled.js">
+  <script type="text/javascript" src="saltan.js">
   </script>
 </head>
 <body onload="onLoad();">
-  <form onsubmit="doFormStuff();" class="my-form">
-    <label for="phrase">Enter a word:</label><br>
-    <input type="text" id="phrase" name="phrase"><br>
+    <label for="phrase">Saltan</label><br>
+    <input type="text" id="phrase" name="phrase" placeholder="Enter a word"><br>
   </form>
   <noscript>
     This site requires Javascript, but the command-line version can be found on 
