Update the <noscript>

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <input type="text" id="phrase" name="phrase" placeholder="Enter a word"><br>
   </form>
   <noscript>
-    This site requires Javascript, but the command-line version can be found on 
+    This site requires Javascript
+    <br>
     <a href=https://github.com/websalt/saltan>Github</a>
   </noscript>
   <div id="main"></div>
