Switch to window.onload

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script type="text/javascript" src="saltan.js">
   </script>
 </head>
-<body onload="onLoad();">
+<body>
     <label for="phrase">Saltan</label><br>
     <input type="text" id="phrase" name="phrase" placeholder="Enter a word"><br>
   </form>
