Shrink the favicon

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <html lang="en">
 <head>
   <title>Saltan</title>
-  <link rel="icon" href="favicon.svg">
+  <link rel="icon" href="favicon.webp">
   <link rel="stylesheet" type="text/css" href="style.css">
   <script type="text/javascript" src="saltan.js">
   </script>
